# ChangeLog for dev-php5/pecl-id3
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-php5/pecl-id3/Attic/ChangeLog,v 1.1 2006/09/29 20:28:12 sebastian Exp $

*pecl-id3-0.2 (29 Sep 2006)

  29 Sep 2006; Sebastian Bergmann <sebastian@gentoo.org> +metadata.xml,
  +pecl-id3-0.2.ebuild:
  Initial ebuild for bug #146771.
