@@ -1,6 +1,9 @@
 # ChangeLog for dev-php5/pecl-id3
-# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-php5/pecl-id3/Attic/ChangeLog,v 1.1 2006/09/29 20:28:12 sebastian Exp $
+# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-php5/pecl-id3/Attic/ChangeLog,v 1.2 2007/03/17 23:59:59 chtekk Exp $
+
+  17 Mar 2007; Luca Longinotti <chtekk@gentoo.org> pecl-id3-0.2.ebuild:
+  Cleanup.
 
 *pecl-id3-0.2 (29 Sep 2006)
 
